# ss-reporting-tool

./: .gitignore  Makefile  __init__.py  config.toml  create_config.py  create_reformat_config.py  create_summary.py  create_summary_category.py  duplicate_parts.py  mod_excel.py  pyproject.toml  pyrightconfig.json  requirements.txt  sample-config.toml  setup.bat  split_excel.py  ss_api.py  ss_api.py.old  ss_uploader.py
split_excel/: .gitignore  Makefile  split_excel.py
src/: Config.py  Table.py  __init__.py  create_summary_category.py  reformat_sheets.py  ss_reporting_tool.py  ss_uploader.py
src/api_wrapper/: feedback_loop.py  get_sheet.py  lock_columns.py  reformat_sheet.py  refresh_summary.py  remove_duplicates.py  remove_dups.py  set_sheet.py  update_sheet.py
src/scripts/: create_reformat_config.py
src/ss_reporting_tool/: Config.py  Report.py  Summary.py  Table.py  Utils.py  __init__.py  __main__.py  create_config.py  create_summary_config.py  create_summary_engine.py  create_summary_interchg.py
src/ss_reporting_tool/api_wrapper/: __init__.py  create_sheet.py  feedback_loop.py  get_sheet.py  lock_columns.py  reformat_sheet.py  refresh_summary.py  remove_duplicates.py  set_sheet.py  update_sheet.py
src/ss_reporting_tool/scripts/: __init__.py  count_rows.py  get_folders.py  reformat_pn_ac_pivot.py  split_excel_category.py
tests/: Config_test.py
