
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ss-reporting"
version = "0.0.1"
description = "smartsheet reporting tool"
authors = [{ name = "smchunn", email = "smchunn@icloud.com" }]
dependencies = [
  "openpyxl",
  "smartsheet-python-sdk",
  "toml",
  "httpx",
  "truststore",
  "polars",
  "pandas",
  "pyinstaller",
  "xlsxwriter",
  "fastexcel",
  "ss-api@git+ssh://git@github.com/smchunn/ss-api.git@master"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
