
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ss-reporting-tool"
version = "0.0.1"
description = "smartsheet reporting tool"
authors = [{ name = "smchunn", email = "smchunn@icloud.com" }]
requires-python = ">= 3.12"
dependencies = [
  "openpyxl",
  "smartsheet-python-sdk",
  "toml",
  "httpx",
  "truststore",
  "polars",
  "pandas",
  "pyinstaller",
  "xlsxwriter",
  "fastexcel",
  "ss-api@git+ssh://git@github.com/smchunn/ss-api.git@master"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
